# HR_Management_voice_agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: chaos.yaml  ci.yaml  cost-report.yaml  deploy-production.yaml  deploy-staging.yaml  dr-test.yaml  security-scan.yaml
docs/adr/: 001-clean-architecture.md  002-transactional-outbox.md  003-event-driven-keda.md  004-vault-pki-mtls.md
docs/api/: openapi.yaml
docs/performance/: benchmarks.md
docs/runbooks/: disaster-recovery.md  incident-response.md
infrastructure/helm/: Chart.yaml  values.yaml
infrastructure/helm/templates/: _helpers.tpl  deployment.yaml
infrastructure/kong/: kong.yaml
infrastructure/kubernetes/: namespace.yaml  network-policies.yaml  rbac.yaml
infrastructure/kubernetes/voice-service/: deployment.yaml  keda-scaledobject.yaml  service.yaml
infrastructure/monitoring/alertmanager/: config.yaml
infrastructure/monitoring/loki/: loki.yml
infrastructure/monitoring/otel-collector/: config.yaml
infrastructure/monitoring/prometheus/: prometheus.yml  rules.yaml
infrastructure/monitoring/tempo/: tempo.yml
infrastructure/opa/policies/: hr_voice_authz.rego
infrastructure/rabbitmq/: definitions.json  rabbitmq.conf
infrastructure/redis/: redis-cluster.conf
infrastructure/terraform/aws/: eks.tf  elasticache.tf  kms.tf  main.tf  outputs.tf  rds.tf  variables.tf
infrastructure/vault/auth-methods/: kubernetes.sh
infrastructure/vault/pki/: setup.sh
infrastructure/vault/policies/: hr-voice-agent.hcl
scripts/: chaos_test.sh  cost_report.py  dr_failover_test.sh  load_test.js  prompt_injection_test.py  rotate_secrets.sh  seed_dev.py  smoke_test.sh  vault-init.sh
scripts/sql/: init.sql
services/analytics_service/: Dockerfile  main.py
services/auth_service/: Dockerfile  main.py
services/hr_service/: Dockerfile  main.py
services/hr_service/api/: candidates_router.py  router.py
services/hr_service/application/: use_cases.py
services/hr_service/domain/: exceptions.py  models.py
services/hr_service/infrastructure/: repositories.py
services/interview_service/: Dockerfile  main.py
services/interview_service/api/: interviews_router.py  router.py
services/interview_service/application/: use_cases.py
services/interview_service/domain/: exceptions.py  models.py
services/interview_service/infrastructure/: repositories.py
services/notification_service/: Dockerfile  main.py
services/onboarding_service/: Dockerfile  main.py
services/onboarding_service/api/: router.py
services/onboarding_service/application/: use_cases.py
services/tenant_service/: Dockerfile  main.py
services/voice_service/: Dockerfile  main.py
shared/: audit.py  auth.py  cache.py  circuit_breaker.py  cost_tracker.py  db_models.py  domain_events.py  error_codes.py  events.py  guardrails.py  idempotency.py  llm_router.py  logger.py  metrics.py  middleware.py  multi_tenant.py  outbox.py  pagination.py  problem_details.py  prompt_registry.py  queue.py  rate_limit.py  repository.py  settings.py  tracing.py  unit_of_work.py  vault_client.py  webhook_verify.py
shared/integration/: base.py  factory.py
(+25 files in other folders)
