[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hr-voice-agent"
version = "3.0.0"
description = "Ultimate Enterprise HR Voice Agent Platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Platform Engineering Team" }]

dependencies = [
    # Web Framework
    "fastapi==0.111.1",
    "uvicorn[standard]==0.30.1",
    "python-multipart==0.0.9",
    "websockets==12.0",

    # Database & ORM
    "sqlalchemy[asyncio]==2.0.31",
    "asyncpg==0.29.0",
    "alembic==1.13.2",
    "greenlet==3.0.3",

    # Cache
    "redis[hiredis]==5.0.7",

    # Settings & Validation
    "pydantic==2.8.2",
    "pydantic-settings==2.4.0",

    # Message Broker
    "aio-pika==9.4.3",
    "aiormq==6.8.1",

    # HTTP Client
    "httpx[http2]==0.27.0",

    # Authentication
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.0",

    # Observability
    "structlog==24.4.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "opentelemetry-instrumentation-sqlalchemy==0.46b0",
    "opentelemetry-instrumentation-redis==0.46b0",
    "opentelemetry-instrumentation-httpx==0.46b0",
    "prometheus-client==0.20.0",

    # LLM Providers
    "openai==1.35.14",
    "anthropic==0.31.2",
    "google-generativeai==0.7.2",
    "ollama==0.3.0",

    # Voice / STT / TTS
    "deepgram-sdk==3.5.0",
    "elevenlabs==1.3.0",

    # Cloud / Storage
    "aioboto3==13.1.1",
    "boto3==1.34.144",

    # Telephony
    "twilio==9.2.3",

    # CRM
    "hubspot-api-client==10.0.0",
    "simple-salesforce==1.12.5",

    # Vault
    "hvac==2.3.0",

    # Utilities
    "tenacity==8.5.0",
    "ujson==5.10.0",
    "arrow==1.3.0",
    "phonenumbers==8.13.41",
    "email-validator==2.2.0",
    "Pillow==10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "httpx==0.27.0",
    "factory-boy==3.3.1",
    "faker==26.0.0",
    "locust==2.29.1",
    "ruff==0.5.5",
    "mypy==1.11.0",
    "types-redis==4.6.0.20240425",
    "types-passlib==1.7.7.20240327",
    "types-ujson==5.10.0.20240515",
    "sqlalchemy[mypy]==2.0.31",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP", "ANN", "S", "N"]
ignore = ["ANN101", "ANN102", "S101", "S105", "B008"]
exclude = ["alembic/"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=80 -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["*/tests/*", "*/migrations/*", "*/alembic/*", "scripts/*"]

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]
